--- a/sectorV/package.json
+++ b/sectorV/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "axios": "^0.19.0",
     "expo": "^35.0.0",
-    "expo-google-sign-in": "^7.0.0",
+    "expo-google-app-auth": "^7.0.0",
+    "firebase": "^7.4.0",
     "moment": "^2.24.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
