--- a/sectorV/package.json
+++ b/sectorV/package.json
@@ -11,6 +11,8 @@
     "axios": "^0.19.0",
     "expo": "^35.0.0",
     "expo-google-app-auth": "^7.0.0",
+    "expo-sensors": "~7.0.0",
+    "expo-sms": "~7.0.0",
     "moment": "^2.24.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
@@ -22,7 +24,10 @@
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
-    "react-navigation-tabs": "^2.5.6"
+    "react-navigation-tabs": "^2.5.6",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.4",
+    "twilio": "^3.37.1"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0"
