--- a/sectorV/package.json
+++ b/sectorV/package.json
@@ -12,7 +12,6 @@
     "expo": "^35.0.0",
     "expo-google-app-auth": "^7.0.0",
     "expo-sensors": "~7.0.0",
-    "expo-sms": "~7.0.0",
     "moment": "^2.24.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
@@ -25,9 +24,7 @@
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.5.6",
-    "react-redux": "^7.1.3",
-    "redux": "^4.0.4",
-    "twilio": "^3.37.1"
+    "redux": "^4.0.4"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0"
